--- a/scripts/Cargo.toml.template
+++ b/scripts/Cargo.toml.template
@@ -1,13 +1,12 @@
 [workspace]
 members = [
-    'runtime/moonriver',
-    'runtime/moonbase',
+    'primitives/bridge',
+    'primitives/common',
+    'runtime/common',
+    'runtime/pangolin',
 ]
 
 [profile.release]
 panic = 'unwind'
 
 [patch.crates-io]
-evm = { git = "https://github.com/purestake/evm", branch = "EVM_BRANCH"}
-evm-runtime = { git = "https://github.com/purestake/evm", branch = "EVM_BRANCH" }
-evm-gasometer = { git = "https://github.com/purestake/evm", branch = "EVM_BRANCH" }
