--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,17 @@
-/tmp
+# System
+.DS_Store
+
+# Integrated Development Environment
+.idea
+.vscode
+
+# Package Manager
+## Cargo
+target
+
+# Build Data
+build
+
+# WASMS
+wasms
+wasm-digests
