--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,5 @@ anyhow     = { version = "1.0" }
 clap       = { version = "3.2", features = ["derive"] }
 serde_json = { version = "1.0" }
 
-subwasmlib  = { version = "0.16", git = "https://github.com/chevdor/subwasm" }
-wasm-loader = { version = "0.16", git = "https://github.com/chevdor/subwasm" }
+subwasmlib  = { version = "0.18", git = "https://github.com/chevdor/subwasm", tag = "v0.18.0" }
+wasm-loader = { version = "0.18", git = "https://github.com/chevdor/subwasm", tag = "v0.18.0" }
