--- a/.github/workflows/release-tracker.yml
+++ b/.github/workflows/release-tracker.yml
@@ -1,13 +1,15 @@
 name: Release tracker
 on:
   schedule:
-    - cron: "*/1 * * * *"
+    - cron: "*/5 * * * *"
+  workflow_dispatch:
 
 env:
   AUTH: ${{ secrets.GITHUB_TOKEN }}
   RUST_TOOLCHAIN: nightly
-  PYTHON_VERSION: 3.10
-
+  PYTHON_VERSION: "3.10"
+  RUNTIME_OVERRIDES_LINK: https://github.com/hack-ink/runtime-overrides/releases/download
+  RUNTIME_OVERRIDES_VERSION: v0.9.0-rc1
 jobs:
   track-release:
     runs-on: ubuntu-latest
@@ -21,6 +23,11 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ env.PYTHON_VERSION }}
+      - name: Install runtime-overrides $${{ env.RUNTIME_OVERRIDES_VERSION }}
+        run: |
+          curl -L ${{ env.RUNTIME_OVERRIDES_LINK }}/${{ env.RUNTIME_OVERRIDES_VERSION }}/runtime-overrides.tar.zst | tar --zst -xv
+          sudo mv runtime-overrides /usr/bin
+          sudo chmod u+x /usr/bin/runtime-overrides
       - name: Fetch latest code
         uses: actions/checkout@v3
       - name: Run
