--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 edition = "2021"
-name    = "runtime-overrides"
-version = "0.4.0"
+name    = "runtime-override"
+version = "0.4.1"
 
 [dependencies]
 # crates.io
